--- a/modules/apps/site/site-item-selector-api/build.gradle
+++ b/modules/apps/site/site-item-selector-api/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly project(":apps:item-selector:item-selector-api")
+	compileOnly project(":apps:item-selector:item-selector-criteria-api")
 	compileOnly project(":core:osgi-service-tracker-collections")
 	compileOnly project(":core:registry-api")
 }
